# Programacion-Concurrente

./: .gitattributes  .gitmodules
actors/dining_philosophers/: Cargo.toml
actors/dining_philosophers/src/: main.rs  phil.rs  table.rs
async/spotify_new_releases/: .gitignore  Cargo.toml
async/spotify_new_releases/src/: main.rs
fork_join/mergesort/: Cargo.toml
fork_join/mergesort/src/: lib.rs  main.rs
fork_join/word_counter/src/: main.rs
fork_join/yt_stats_analysis/: .gitignore  Cargo.toml
fork_join/yt_stats_analysis/src/: main.rs
locks/idle_game/: Cargo.toml
locks/idle_game/src/: main.rs
petri_nets/: .gitignore
petri_nets/nets/: cigarette_smokers.xml  mutex.xml  philosophers.xml  producer_consumer.xml  producer_consumer_with_bounded_buffer.xml  rwlock.xml
practica/: Cargo.toml
practica/src/: lib.rs  producer_consumer_mutex.rs  rwlock.rs  rwlock_with_condvars.rs  semaphore.rs  semaphore_condvars.rs
sync/cigarette_smokers/: Cargo.toml
sync/cigarette_smokers/src/: main.rs
sync/dining_philosophers/: Cargo.toml
sync/dining_philosophers/src/: main.rs
sync/old_banker/: Cargo.toml
sync/sleeping_barber/: Cargo.toml
thread_pool/src/: concurrent_deque.rs  lib.rs  semaphore.rs  shared_data.rs  thread_pool.rs
tp1/: .gitignore  Cargo.toml  README.md
tp1/src/: main.rs
tp2/: Cargo.toml  README.md  pre_README.md
tp2/gateway/: Cargo.toml
tp2/ice_cream_shop/: Cargo.toml
tp2/robot/: Cargo.toml
tp2/screen/: Cargo.toml
tp2/test_cases/: insuficient_flavour.jsonl  invalid_credit_card.jsonl  mixed_cases.jsonl  valid_credit_card.jsonl
(+45 files in other folders)
